--- a/src/css/index.css
+++ b/src/css/index.css
@@ -46,7 +46,7 @@ header {
 /* Main Styles */
 main {
     display: flex;
-    gap: 5rem;
+    gap: 1rem;
     flex: 1;
     padding: 5rem;
 }
@@ -56,7 +56,7 @@ main {
     background-color: white;
     box-shadow: 0px 0px 10px 0px rgba(220, 220, 220, 0.7);
     border-radius: 20px;
-    max-width: 450px;
+    min-width: 400px;
 }
 
 .save-exchange {
@@ -122,7 +122,7 @@ main {
     display: flex;
     align-items: center;
     gap: 0.5rem;
-    width: 400px;
+    width: 100%;
 }
 
 .inputs-container {
@@ -244,7 +244,7 @@ main {
 
 /* News Aside */
 .news-aside {
-    padding: 2rem 2rem;
+    padding: 1rem 2rem;
     background-color: white;
     box-shadow: 0px 0px 10px 0px rgba(220, 220, 220, 0.7);
     border-radius: 20px;
@@ -255,10 +255,60 @@ main {
     display: flex;
     gap: 1rem;
     align-items: center;
+    margin-bottom: 1rem;
+}
+
+.news-container {
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+    max-height: 480px;
+    overflow: auto;
+    justify-content: center;
 }
 
 .news-title {
     font-family: var(--news);
+}
+
+.news-card {
+    display: flex;
+    flex-direction: column;
+    width: 250px;;
+    background-color: var(--white);
+    border-radius: 20px;
+}
+
+.news-image {
+    width: 250px;
+    height: auto;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+}
+
+.news-info {
+    padding: 1rem;
+}
+
+.news-article-title {
+    font-family: var(--news);
+    margin: 0;
+}
+
+.news-description {
+    font-family: var(--poppins);
+    line-height: 1rem;
+    font-weight: 300;
+}
+
+.read-more {
+    font-family: var(--poppins);
+    color: var(--green);
+    text-decoration: none;
+}
+
+.read-more:hover {
+    text-decoration: underline;
 }
 
 /* Footer Styles */
@@ -281,15 +331,24 @@ footer {
 }
 
 /* Responsiveness */
-@media screen and (max-width: 767px){
+@media screen and (max-width: 1000px){
     main {
         flex-direction: column;
         padding: 1rem;
         gap: 1rem;
     }
 
+    .currency-section {
+        width: 100%;
+        box-sizing: border-box;
+    }
+
     .data-container {
         gap: 0.5rem;
+    }
+
+    .inputs-container {
+        width: 100%;
     }
 
     .switch-image {
